--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="">
 
 <head>
 
@@ -119,7 +119,7 @@
 
             <!-- Logo -->
             <a class="logo" href="#">
-                <img src="img/logo-light.png" alt="logo">
+                <img src="img/BGDlogo.png" alt="logo">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -754,7 +754,7 @@
                     <div class="item abot">
                         <div class="logo-footer mb-20">
                             <a href="#0" class="logo">
-                                <img src="img/logo-light.png" alt="">
+                                <img src="img/BGDlogo.png" alt="">
                             </a>
                         </div>
                         <p>Our team takes over everything, from an idea and concept development to realization.</p>
