--- a/index.html
+++ b/index.html
@@ -661,12 +661,12 @@
                         <div class="item wow fadeInUp" data-wow-delay=".3s">
                             <div class="img wow imago">
                                 <img src="img/process/process_list_3.png" alt="">
-                                <div class="social">
-                                    <!-- <a href="#0"><i class="fab fa-facebook-f"></i></a>
+                                <!-- <div class="social">
+                                    <a href="#0"><i class="fab fa-facebook-f"></i></a>
                                     <a href="#0"><i class="fab fa-twitter"></i></a>
                                     <a href="#0"><i class="fab fa-behance"></i></a>
-                                    <a href="#0"><i class="fab fa-linkedin-in"></i></a> -->
-                                </div>
+                                    <a href="#0"><i class="fab fa-linkedin-in"></i></a>
+                                </div> -->
                             </div>
                             <div class="info">
                                 <h5>3. Break Down Quotation</h5>
@@ -750,7 +750,7 @@
     <footer class="main-footer dark">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <div class="item abot">
                         <div class="logo-footer mb-20">
                             <a href="#0" class="logo">
@@ -794,7 +794,7 @@
                         <p>FAX: +971 4 363 6584</p>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-2">
                     <div class="item fotcont">
                         <div class="fothead">
                             <h6>Visit</h6>
