Removed links from Nav Menu.

--- a/index.html
+++ b/index.html
@@ -143,22 +143,22 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio-mas2.html">Portfolio</a>
+                        <a class="nav-link" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Services</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="blog.html">Irrigation systems</a>
-                            <a class="dropdown-item" href="blog-details.html">Swimming pools</a>
-                            <a class="dropdown-item" href="blog-details.html">Landscaping and gardening</a>
+                            <a class="dropdown-item" href="#">Irrigation systems</a>
+                            <a class="dropdown-item" href="#">Swimming pools</a>
+                            <a class="dropdown-item" href="#">Landscaping and gardening</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
                 <div class="social-icon">
