--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <i class="fas fa-chevron-left"></i>
                 </div>
             </div>
-            <div class="swiper-pagination top custom-font"></div>
+            <!-- <div class="swiper-pagination top custom-font"></div> -->
         </div>
     </header>
 
