About page - testimonial bg image change.

--- a/about.html
+++ b/about.html
@@ -218,7 +218,7 @@
 
     <!-- ==================== Start Testimonials ==================== -->
 
-    <section class="testimonials grid section-padding bg-img parallaxie" data-background="img/about/about-banner.jpg" data-overlay-dark="9">
+    <section class="testimonials grid section-padding bg-img parallaxie" data-background="img/about/testimonial-bg.jpg" data-overlay-dark="9">
         <div class="container">
             <div class="section-head text-center">
                 <div class="row justify-content-center">
