Portfolio page and Project Details page added. :heart:

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                         <a class="nav-link" href="/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="/portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -141,7 +141,7 @@
 
     <!-- ==================== Start Header ==================== -->
 
-    <header class="pages-header bg-img valign parallaxie" data-background="img/about/about-banner-2.jpg" data-overlay-dark="5">
+    <header class="pages-header bg-img valign parallaxie" data-background="img/about/about-banner-3.jpg" data-overlay-dark="5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
