--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <a class="nav-link" href="/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="/portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -189,7 +189,7 @@
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/hero-banners/hero-banner-1.jpg" data-overlay-dark="6">
+                    <div class="bg-img valign" data-background="img/facebook/fb-garden-1.jpg" data-overlay-dark="6">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-10 offset-lg-1">
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/hero-banners/hero-banner-2.jpg" data-overlay-dark="5">
+                    <div class="bg-img valign" data-background="img/facebook/fb-outdoor-3.jpg" data-overlay-dark="5">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-10 offset-lg-1">
@@ -230,7 +230,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/hero-banners/hero-banner-3.jpg" data-overlay-dark="6">
+                    <div class="bg-img valign" data-background="img/facebook/fb-pool-1.jpg" data-overlay-dark="6">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-10 offset-lg-1">
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/hero-banners/hero-banner-4.jpg" data-overlay-dark="5">
+                    <div class="bg-img valign" data-background="img/facebook/fb-outdoor-5.jpg" data-overlay-dark="5">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-10 offset-lg-1">
