--- a/project-details.html
+++ b/project-details.html
@@ -7,15 +7,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="HTML5 Template Archo onepage themeforest" />
-    <meta name="description" content="Archo - Onepage Multi-Purpose HTML5 Template" />
-    <meta name="author" content="" />
+    <meta name="keywords" content="swimming pool and landscaping companies in Dubai, landscape maintenance companies in Dubai, landscaping companies in Dubai" />
+	<meta name="description" content="Stop searching for swimming pool and landscaping companies or landscape maintenance firms in Dubai. Click here to get in touch with the best Dubai pool and landscaping company." />
 
     <!-- Title  -->
-    <title>Archo</title>
+    <title>Dubai pool and landscaping company, landscape firms in Dubai, swimming pool and landscaping companies in dubai, Landscaping in Dubai landscaping companies in Dubai, landscape maintenance companies in Dubai</title>
+
+    <!-- <base href="https://beautifulgardendubai.com/"> -->
+    <link rel="canonical" href="https://beautifulgardendubai.com/"/>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="img/index.ico" />
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
@@ -71,8 +73,8 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="logo" href="#">
-                <img src="img/logo-light.png" alt="logo">
+            <a class="logo" href="/index.html">
+                <img src="img/BGDlogo.png" alt="logo">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -83,7 +85,7 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Home</a>
                         <div class="dropdown-menu">
@@ -91,23 +93,27 @@
                             <a class="dropdown-item" href="index3.html">Architecture</a>
                             <a class="dropdown-item" href="index2.html">Interior Design</a>
                         </div>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio-mas2.html">Portfolio</a>
+                        <a class="nav-link" href="/portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Blog</a>
+                            aria-haspopup="true" aria-expanded="false">Services</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="blog.html">Blogs</a>
-                            <a class="dropdown-item" href="blog-details.html">Post Details</a>
+                            <a class="dropdown-item" href="#">Irrigation systems</a>
+                            <a class="dropdown-item" href="#">Swimming pools</a>
+                            <a class="dropdown-item" href="#">Landscaping and gardening</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
                 <div class="social-icon">
@@ -115,15 +121,15 @@
                     <a href="#0"><i class="fab fa-twitter"></i></a>
                     <a href="#0"><i class="fab fa-behance"></i></a>
                 </div>
-                <div class="search">
+                <!-- <div class="search">
                     <span class="icon pe-7s-search cursor-pointer"></span>
                     <div class="search-form text-center custom-font">
-                        <form action="">
+                        <form>
                             <input type="text" name="search" placeholder="Search">
                         </form>
                         <span class="close pe-7s-close cursor-pointer"></span>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </nav>
@@ -134,14 +140,14 @@
 
     <!-- ==================== Start Header ==================== -->
 
-    <header class="pages-header bg-img valign parallaxie" data-background="img/portfolio/project1/bg.jpg" data-overlay-dark="5">
+    <header class="pages-header bg-img valign parallaxie" data-background="img/portfolio/beautiful-garden/arabian-ranches-1.jpg" data-overlay-dark="5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="cont text-center">
-                        <h1>Luxury Furniture</h1>
+                        <h1>Arabian Ranches - Saheel</h1>
                         <div class="path">
-                            <a href="#0">Home</a><span>/</span><a href="#0">Portfolio</a><span>/</span><a href="#0" class="active">Luxury Furniture</a>
+                            <a href="#0">Home</a><span>/</span><a href="#0">Portfolio</a><span>/</span><a href="#0" class="active">Arabian Ranches - Saheel</a>
                         </div>
                     </div>
                 </div>
@@ -160,7 +166,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-4">
                     <div class="htit">
-                        <h4>introduction</h4>
+                        <h4>Introduction</h4>
                     </div>
                 </div>
                 <div class="col-lg-8 offset-lg-1 col-md-8 mb-30">
@@ -174,7 +180,7 @@
                 <div class="col-lg-3">
                     <div class="item mt-30">
                         <h6>Client</h6>
-                        <p><a href="#0">Envato.com</a></p>
+                        <p><a href="#0">Arabian Ranches - Saheel </a></p>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -186,7 +192,7 @@
                 <div class="col-lg-3">
                     <div class="item mt-30">
                         <h6>Categories</h6>
-                        <p><a href="#0">Web Design </a>, <a href="#0">WordPress</a></p>
+                        <p><a href="#0">Swimming pool </a>, <a href="#0">Outdoor design</a></p>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -208,18 +214,18 @@
 
     <section class="projdtal">
         <div class="justified-gallery">
-            <a href="img/portfolio/project1/1.jpg">
-                <img alt="" src="img/portfolio/project1/1.jpg" />
+            <a href="img/portfolio/beautiful-garden/Arabian Ranches/1.jpg">
+                <img alt="" src="img/portfolio/beautiful-garden/Arabian Ranches/1.jpg" />
             </a>
-            <a href="img/portfolio/project1/2.jpg">
-                <img alt="" src="img/portfolio/project1/2.jpg" />
+            <a href="img/portfolio/beautiful-garden/Arabian Ranches/2.jpg">
+                <img alt="" src="img/portfolio/beautiful-garden/Arabian Ranches/2.jpg" />
             </a>
 
-            <a href="img/portfolio/project1/6.jpg">
-                <img alt="" src="img/portfolio/project1/6.jpg" />
+            <a href="img/portfolio/beautiful-garden/Arabian Ranches/3.jpg">
+                <img alt="" src="img/portfolio/beautiful-garden/Arabian Ranches/3.jpg" />
             </a>
-            <a href="img/portfolio/project1/3.jpg">
-                <img alt="" src="img/portfolio/project1/3.jpg" />
+            <a href="img/portfolio/beautiful-garden/Arabian Ranches/4.jpg">
+                <img alt="" src="img/portfolio/beautiful-garden/Arabian Ranches/4.jpg" />
             </a>
         </div>
     </section>
@@ -234,7 +240,7 @@
     <section>
         <div class="container-fluid">
             <div class="video-wrapper section-padding bg-img parallaxie valign"
-                data-background="img/portfolio/project1/vid.jpg" data-overlay-dark="4">
+                data-background="img/portfolio/beautiful-garden/Arabian Ranches/5.jpg" data-overlay-dark="4">
                 <div class="full-width text-center">
                     <a class="vid" href="https://vimeo.com/127203262">
                         <div class="vid-butn">
@@ -256,11 +262,11 @@
 
     <section class="projdtal">
         <div class="justified-gallery">
-            <a href="img/portfolio/project1/8.jpg">
-                <img alt="" src="img/portfolio/project1/8.jpg" />
+            <a href="img/portfolio/beautiful-garden/Arabian Ranches/5.jpg">
+                <img alt="" src="img/portfolio/beautiful-garden/Arabian Ranches/5.jpg" />
             </a>
-            <a href="img/portfolio/project1/9.jpg">
-                <img alt="" src="img/portfolio/project1/9.jpg" />
+            <a href="img/portfolio/beautiful-garden/Arabian Ranches/6.jpg">
+                <img alt="" src="img/portfolio/beautiful-garden/Arabian Ranches/6.jpg" />
             </a>
         </div>
     </section>
@@ -277,9 +283,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="content text-center">
-                        <a href="project-details2.html">
+                        <a href="project-details.html">
                             <h6 class="wow" data-splitting>Next Project</h6>
-                            <h2 class="wow" data-splitting><b> Luxury </b> Furniture</h2>
+                            <h2 class="wow" data-splitting><b> Jumeirah Park </b></h2>
                         </a>
                     </div>
                 </div>
@@ -297,11 +303,11 @@
     <footer class="main-footer dark">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <div class="item abot">
                         <div class="logo-footer mb-20">
                             <a href="#0" class="logo">
-                                <img src="img/logo-light.png" alt="">
+                                <img src="img/BGDlogo.png" alt="">
                             </a>
                         </div>
                         <p>Our team takes over everything, from an idea and concept development to realization.</p>
@@ -313,35 +319,32 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 offset-lg-1">
+                <div class="col-lg-3">
                     <div class="item usful-links">
                         <div class="fothead">
-                            <h6>Useful Links</h6>
+                            <h6>Services</h6>
                         </div>
                         <ul>
-                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Interior Design</a></li>
-                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Design Agency</a></li>
-                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Mattress Shop</a></li>
-                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Contact Us</a></li>
+                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Landscape and gardening</a></li>
+                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Irrigation</a></li>
+                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Swimming pool</a></li>
+                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Hardscape</a></li>
+                            <li><i class="fas fa-chevron-right"></i> <a href="#0">Softscape</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-lg-3">
                     <div class="item fotcont">
                         <div class="fothead">
-                            <h6>Call</h6>
+                            <h6>Contact</h6>
                         </div>
-                        <p>+7(111)123456789</p>
-                        <p>+1(000)987654321</p>
-                    </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="item fotcont">
-                        <div class="fothead">
-                            <h6>Write</h6>
-                        </div>
-                        <p>contact@Archo.com</p>
-                        <p>Username@website.com</p>
+                        <p>
+                            <a href="mailto:info@beautifulgardendubai.com">Mail: info@beautifulgardendubai.com</a>
+                        </p>
+                        <p>
+                            <a href="tel:+97143618119">TEL: +971 4 361 8119</a>
+                        </p>
+                        <p>FAX: +971 4 363 6584</p>
                     </div>
                 </div>
                 <div class="col-lg-2">
@@ -349,8 +352,7 @@
                         <div class="fothead">
                             <h6>Visit</h6>
                         </div>
-                        <p>B17 Princess Road, London, Greater London
-                            NW18JR, United Kingdom</p>
+                        <p>Office #2108, Smart Height Tower,Tecom, Dubai, United Arab Emirates</p>
                     </div>
                 </div>
             </div>
@@ -360,13 +362,12 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="text-left">
-                            <p>© 2020, Archo Template. Made with passion by <a
-                                    href="https://themeforest.net/user/ui-themez">UI-ThemeZ</a>.</p>
+                            <p>© 2021, Beautiful Garden Dubai - Gardening Dubai Company.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="text-right">
-                            <p>All right reserved.</p>
+                            <p>All rights reserved.</p>
                         </div>
                     </div>
                 </div>
