--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="logo" href="/index.html">
+            <a class="logo" href="index.html">
                 <img src="img/BGDlogo.png" alt="logo">
             </a>
 
@@ -140,13 +140,13 @@
                         </div>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
